--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-C:\Users\rodca\amaya\1\index.html<html>
+<html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
   <title>Aisbel Powell - Chemical Kinetic</title>
