--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@ those reactions in which solute and solvent not mix properly).</p>
 <p>In a solid, only those particles that are at the surface can be involved in
 a reaction. Crushing a solid into smaller parts means that more particles are
 present at the surface, and the frequency of collisions between these and
-reactant particles increases, and so reaction occurs more rapidly. </p>
+reactant particles increases, and so reaction occurs more rapidly. <img
+alt="First formula" src="formule1.png" style="float: left" width="141"
+height="59"></p>
 
 <p>For example, Sherbet (powder) is a mixture of very fine powder of malic acid
 (a weak organic acid) and sodium hydrogen carbonate. On contact with the saliva
@@ -91,9 +93,11 @@ dioxide and providing for the fizzy sensation. </p>
 
 <p>Also, fireworks manufacturers modify the surface area of solid reactants to
 control the rate at which the fuels in fireworks are oxidised, using this to
-create diverse effects. For example, finely divided aluminium confined in a
-shell explodes violently. If larger pieces of aluminium are used, the reaction
-is slower and sparks are seen as pieces of burning metal are ejected. </p>
+create diverse effects. </p>
+
+<p>For example, finely divided aluminium confined in a shell explodes
+violently. If larger pieces of aluminium are used, the reaction is slower and
+sparks are seen as pieces of burning metal are ejected. </p>
 
 <p></p>
 
@@ -139,7 +143,7 @@ of molecular energies.</p>
     concentrations of the reactants. usually, rapid reactions are caused by
     relatively smaller activation energies.</li>
   <li>The 'rule of thumb' that the rate of chemical reactions doubles for every
-    10 Â°C temperature rise is a common misconception. This may have been
+    10 °C temperature rise is a common misconception. This may have been
     generalized from the special case of biological systems, where the &#x3b1;
     (temperature coefficient) is often between 1.5 and 2.5.</li>
   <li>A reaction's kinetics can also be studied with a temperature jump
@@ -148,5 +152,45 @@ of molecular energies.</p>
     temperature jump apparatus is a shock tube, which can rapidly jump a gas's
     temperature by more than 1000 degrees. </li>
 </ol>
+
+<p></p>
+
+<h4>Temperature</h4>
+
+<p>Temperature usually has a major effect on the rate of a chemical reaction.
+Molecules at a higher temperature have more thermal energy. Although collision
+frequency is greater at higher temperatures, this alone contributes only a very
+small proportion to the increase in rate of reaction. Much more important is
+the fact that the proportion of reactant molecules with sufficient energy to
+react (energy greater than activation energy: E &gt; Ea) is significantly
+higher and is explained in detail by the Maxwell&#x2013;Boltzmann distribution
+of molecular energies.</p>
+
+<p></p>
+
+<p>The effect of temperature on the rate of chemical reaction:</p>
+
+<p></p>
+<ol>
+  <li>Under certain temperature, chemical rate of a reaction depends on the
+    value of the A-factor, the magnitude of the activation energy, and the
+    concentrations of the reactants. usually, rapid reactions are caused by
+    relatively smaller activation energies.</li>
+  <li>The 'rule of thumb' that the rate of chemical reactions doubles for every
+    10 °C temperature rise is a common misconception. This may have been
+    generalized from the special case of biological systems, where the &#x3b1;
+    (temperature coefficient) is often between 1.5 and 2.5.</li>
+  <li>A reaction's kinetics can also be studied with a temperature jump
+    approach. This involves using a sharp rise in temperature and observing the
+    relaxation time of the return to equilibrium. A particularly useful form of
+    temperature jump apparatus is a shock tube, which can rapidly jump a gas's
+    temperature by more than 1000 degrees. </li>
+</ol>
+
+<p><img alt="The reaction path" src="800px-Activation_energy.svg.png"></p>
+
+<p></p>
+
+<p></p>
 </body>
 </html>
