--- a/cv.html
+++ b/cv.html
@@ -186,5 +186,15 @@ for Lic. Chemical at Universidad de Panama, Republic of Panama</p>
 </address>
 
 <p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p><a href="index.html">&lt;-- Get back</a> </p>
+
+<p></p>
 </body>
 </html>
