--- a/formu.html
+++ b/formu.html
@@ -188,48 +188,50 @@ Vernaza</p>
       </tr>
       <tr>
         <td>URL</td>
-        <td><input size="90" value="Escribe la URL de tu página web personal"
+        <td><input size="90" value="Escribe la URL de tu pagina web personal"
           type="text"></td>
       </tr>
       <tr>
         <td>Fecha</td>
-        <td></td>
+        <td><input id="fecha" name="ingrese-la-fecha" size="40"
+        type="text"></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
+        <td>Tiempo</td>
+        <td><input name="tiempo" type="text"></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
+        <td>Fecha y hora</td>
+        <td><input size="40" type="text"></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
+        <td>Mes</td>
+        <td><input name="mesnacimiento" size="40" type="text"></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
+        <td>Semana</td>
+        <td><input name="unasemana" size="40" type="text"></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
+        <td>Numero</td>
+        <td><input name="eje-equis" size="40" type="text"></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
+        <td>Telefono</td>
+        <td><input name="telefono" size="60" type="text"></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
+        <td>Termino de busqueda</td>
+        <td><input name="busquedamusica" size="60" type="text"></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
+        <td>Color favorito</td>
+        <td><input name="colorsecundario" type="text"></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
+        <td>Enviar</td>
+        <td>
+          <input type="submit" value="Enviar"></td>
       </tr>
       <tr>
         <td></td>
@@ -238,13 +240,21 @@ Vernaza</p>
     </tbody>
   </table>
 </form>
+<datalist id="listacoloresperfil">
+<option value="#00ffff"></option>
+<option value="#ff00ff"></option>
+<option value="#ffff00"></option>
+<option value="#ffaa00"></datalist></option>
+<p>
+<option value="#ffaa00"></option></p>
 
-<p></p>
+<p>
+<option value="#ffaa00"></option></p>
 
-<p></p>
+<p>
+<option value="#ffaa00"></option></p>
 
-<p></p>
-
-<p><a href="index.html">&lt;-- Get back</a> </p>
+<p>
+<option value="#ffaa00"><a href="index.html">&lt;-- Get back</a> </option></p>
 </body>
 </html>
