--- a/formu.html
+++ b/formu.html
@@ -240,11 +240,12 @@ Vernaza</p>
     </tbody>
   </table>
 </form>
-<datalist id="listacoloresperfil">
-<option value="#00ffff"></option>
-<option value="#ff00ff"></option>
-<option value="#ffff00"></option>
-<option value="#ffaa00"></datalist></option>
+<datalist id=listacoloresperfil>
+<option value="#00ffff"></option> 
+<option value="#ff00ff"></option> 
+<option value="#ffff00"></option> 
+<option value="#ffaa00"></datalist></option> 
+
 <p>
 <option value="#ffaa00"></option></p>
 
