--- a/formu.html
+++ b/formu.html
@@ -234,8 +234,8 @@ Vernaza</p>
           <input type="submit" value="Enviar"></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
+        <td>Estudiante:</td>
+        <td>Aisbel Powell</td>
       </tr>
     </tbody>
   </table>
@@ -245,6 +245,8 @@ Vernaza</p>
 <option value="#ff00ff"></option> 
 <option value="#ffff00"></option> 
 <option value="#ffaa00"></datalist></option> 
+
+<p>&lt;-- <a href="index.html">Get back</a></p>
 
 <p>
 <option value="#ffaa00"></option></p>
