--- a/index.html
+++ b/index.html
@@ -208,19 +208,31 @@ a[href] {
 
 <p></p>
 
-<h1
-style="text-align:center;margin-left:auto;margin-right:auto;">Geolocalizacion</h1>
+<h1 style="text-align:center;margin-left:auto;margin-right:auto;"><span
+style="color:#ff8000">Geolocalizacion</span></h1>
 
 <p></p>
 
-<h3>Geolocalizacion Demo</h3>
+<h3><span style="color:#ff0080">Geolocalizacion. Demostracion</span></h3>
 
-<p><a id="mapLink" href="http://maps.google.com">click for a map</a> </p>
-<iframe id="embedMap" width="800" height="500" frameborder="0" scrolling="no"
-marginheight="0" marginwidth="0" src="">
+<p>(Podemos encontrarle en un mapa de Google sin que Usted lo sepa, pero vamos
+a dejar que lo haga Usted mismo/a). Si el navegador le solicita un permiso para
+usar mapas, por favor, acepte dar el permiso. </p>
+
+<p>Gracias.</p>
+
+<p> </p>
+
+<p><a id="mapLink" href="http://maps.google.com" name="mapLink">Haga clic aqui
+para encontrarlo/a voluntarimente en un mapa</a></p>
+
+<p> </p>
+
+<p><iframe id="embedMap" width="800" height="500" frameborder="0"
+scrolling="no" marginheight="0" marginwidth="0" src="">
 </iframe>
 <br>
-
+</p>
 
 <p></p>
 </body>
