--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@ style="color:#ff8000">Geolocalizacion</span></h1>
 
 <p>(Podemos encontrarle en un mapa de Google sin que Usted lo sepa, pero vamos
 a dejar que lo haga Usted mismo/a). Si el navegador le solicita un permiso para
-usar mapas, por favor, acepte dar el permiso. </p>
+usar mapas, por favor, acepte dar el permiso. Si usa Windows 10 y el navegador
+Edge, le podria solicitar varios permisos.</p>
 
 <p>Gracias.</p>
 
