--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ Edge, le podria solicitar varios permisos.</p>
 
 <p> </p>
 
-<p><a id="mapLink" href="http://maps.google.com" name="mapLink">Haga clic aqui
+<p><a id="mapLink"  href="http://maps.google.com" name="mapLink" target="_blank">Haga clic aqui
 para encontrarlo/a voluntarimente en un mapa</a></p>
 
 <p> </p>
