--- a/index.html
+++ b/index.html
@@ -222,19 +222,30 @@ Edge, le podria solicitar varios permisos.</p>
 
 <p>Gracias.</p>
 
-<p> </p>
+<p></p>
 
-<p><a id="mapLink"  href="http://maps.google.com" name="mapLink" target="_blank">Haga clic aqui
-para encontrarlo/a voluntarimente en un mapa</a></p>
+<p><a id="mapLink" href="http://maps.google.com" name="mapLink"
+target="_blank">Haga clic aqui para encontrarlo/a voluntarimente en un
+mapa</a></p>
 
-<p> </p>
-
-<p><iframe id="embedMap" width="800" height="500" frameborder="0"
+<p><iframe id="embedMap" width="300" height="100" frameborder="0"
 scrolling="no" marginheight="0" marginwidth="0" src="">
 </iframe>
 <br>
 </p>
 
-<p></p>
+<h1
+style="text-align:center;margin-left:auto;margin-right:auto;color:#8080ff"><span
+style="color:#0080ff">Audio</span></h1>
+
+<h3 style="color:#ff0080">Demostracion de Audio</h3>
+
+<p>Haga clic en el siguiente control de audio para transmtir audio MP3 a traves
+de la pagina web</p>
+
+<p> <audio controls>
+  <source src="Cut_JPY_love_is_in_the_air96kbps.mp3" type="audio/mpeg">
+Si su navegador no soporta audio Usted vera este mensaje...
+</audio> </p>
 </body>
 </html>
