--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@ a[href] {
 <body onload="getLoc()">
 <p style="text-align:center;margin-left:auto;margin-right:auto;">MENU</p>
 
-<p>1. <a href="cv.html">My Curricula</a></p>
+<p>1. <a href="cv.html">My Curricula</a> Sprint 3</p>
 
-<p>2. <a href="chemkin.html">Chemical Kinetic</a></p>
+<p>2. <a href="chemkin.html">Chemical Kinetic</a> Sprint 3</p>
 
-<p>3. <a href="formu.html">HTML Forms</a></p>
+<p>3. <a href="formu.html">HTML Forms</a> Sprint 3</p>
 
 <p></p>
 
@@ -241,11 +241,33 @@ style="color:#0080ff">Audio</span></h1>
 <h3 style="color:#ff0080">Demostracion de Audio</h3>
 
 <p>Haga clic en el siguiente control de audio para transmtir audio MP3 a traves
-de la pagina web</p>
+de la pagina web // John Paul Young - Love is in the air (1978).</p>
 
-<p> <audio controls>
-  <source src="Cut_JPY_love_is_in_the_air96kbps.mp3" type="audio/mpeg">
-Si su navegador no soporta audio Usted vera este mensaje...
-</audio> </p>
+<p><audio controls><source src=Cut_JPY_love_is_in_the_air96kbps.mp3
+type=audio/mpeg>Si su navegador no soporta audio Usted vera este mensaje... </p>
+
+<p></audio></p>
+
+<p></p>
+
+<h1 style="text-align:center;margin-left:auto;margin-right:auto;"><span
+style="color:#0080ff">Video</span></h1>
+
+<h3 style="color:#ff0080">Demostracion de video</h3>
+<video width=320 height=240 controls><source
+src=https://www.w3schools.com/html/mov_bbb.mp4 type=video/mp4>Este navegador no
+ve videos. </video>
+
+<p></p>
+
+<p>Youtube Videos - Streaming</p>
+
+<p>Demostracion Youtube</p>
+
+<p> <iframe width="420" height="315"
+src="https://www.youtube.com/watch?v=p14mFimABd4">
+</iframe> </p>
+
+<p></p>
 </body>
 </html>
