--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<doctype html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
   <title>Aisbel Powell - Menu</title>
@@ -208,6 +208,26 @@ a[href] {
 
 <p></p>
 
+<h1
+style="text-align:center;margin-left:auto;margin-right:auto;color:#0080c0">Mapas
+de imagenes</h1>
+
+<h3 style="color:#ff0080">Demostracion de Maps\Coordenadas</h3>
+
+<p>
+<img src="mapa2.jpg" usemap="#image_map">
+<map name="image_map">
+  <area alt="Mi pequeño CV" title="Mi pequeño CV" href="cv.html" coords="29,-9 21,35 128,36 132,-5 99,-9 69,-2 51,-8 " shape="polygon">
+  <area alt="Quimica Cinetica" title="Quimica Cinetica" href="formu.html" coords="272,21 256,33 211,46 167,38 144,21 141,8 147,-7 171,-20 206,-22 238,-19 262,-6 " shape="polygon">
+  <area alt="Este mismo archivo" title="Este mismo archivo" href="index.html" coords="283,39 380,40 379,-13 284,-14 " shape="polygon">
+</map>
+
+</p>
+<p>
+Los mapas de imágenes funcionan como enlaces utilizando formas geometricas a 
+base de coordenadas. Pase el ratón sobre las tres imagenes de la figura, y podrá 
+moverse a otro archivo html</p>
+
 <h1 style="text-align:center;margin-left:auto;margin-right:auto;"><span
 style="color:#ff8000">Geolocalizacion</span></h1>
 
@@ -260,14 +280,14 @@ ve videos. </video>
 
 <p></p>
 
-<p>Youtube Videos - Streaming</p>
+<h1
+style="text-align:center;margin-left:auto;margin-right:auto;color:#0080c0">Youtube
+Videos - Streaming</h1>
 
-<p>Demostracion Youtube</p>
+<h3 style="color:#ff0080">Demostracion Youtube</h3>
 
-<p> <iframe width="420" height="315"
-src="https://youtu.be/9XxcuN-PTtI">
-</iframe> </p>
-
-<p></p>
+<p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/iLx7IH5VI4w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 </body>
 </html>
