--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<doctype html>
+<!doctype html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
   <title>Aisbel Powell - Menu</title>
@@ -206,7 +206,7 @@ a[href] {
 
 <p>3. <a href="formu.html">HTML Forms</a> Sprint 3</p>
 
-<p></p>
+<p>4. <a href="galeria.html">Galeria Bootstrap</a></p>
 
 <h1
 style="text-align:center;margin-left:auto;margin-right:auto;color:#0080c0">Mapas
