--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@ a[href] {
 <p>3. <a href="formu.html">HTML Forms</a> Sprint 3</p>
 
 <p>4. <a href="galeria.html">Galeria Bootstrap</a></p>
+  
+  <p>5. <a href="https://elblogdeestela13.wordpress.com/">El Blog de Estela. Mi Blog</a></p>
 
 <h1
 style="text-align:center;margin-left:auto;margin-right:auto;color:#0080c0">Mapas
@@ -217,15 +219,15 @@ de imagenes</h1>
 <p>
 <img src="mapa2.jpg" usemap="#image_map">
 <map name="image_map">
-  <area alt="Mi pequeÒo CV" title="Mi pequeÒo CV" href="cv.html" coords="29,-9 21,35 128,36 132,-5 99,-9 69,-2 51,-8 " shape="polygon">
+  <area alt="Mi peque√±o CV" title="Mi peque√±o CV" href="cv.html" coords="29,-9 21,35 128,36 132,-5 99,-9 69,-2 51,-8 " shape="polygon">
   <area alt="Quimica Cinetica" title="Quimica Cinetica" href="formu.html" coords="272,21 256,33 211,46 167,38 144,21 141,8 147,-7 171,-20 206,-22 238,-19 262,-6 " shape="polygon">
   <area alt="Este mismo archivo" title="Este mismo archivo" href="index.html" coords="283,39 380,40 379,-13 284,-14 " shape="polygon">
 </map>
 
 </p>
 <p>
-Los mapas de im·genes funcionan como enlaces utilizando formas geometricas a 
-base de coordenadas. Pase el ratÛn sobre las tres imagenes de la figura, y podr· 
+Los mapas de im√°genes funcionan como enlaces utilizando formas geometricas a 
+base de coordenadas. Pase el rat√≥n sobre las tres imagenes de la figura, y podr√° 
 moverse a otro archivo html</p>
 
 <h1 style="text-align:center;margin-left:auto;margin-right:auto;"><span
