--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ a[href] {
 
 <p>4. <a href="galeria.html">Galeria Bootstrap</a></p>
   
-  <p>5. <a href="https://elblogdeestela13.wordpress.com/">El Blog de Estela. Mi Blog</a></p>
+  <p>5. <a href="https://elblogdeestela13.wordpress.com/" target="_blank">El Blog de Estela. Mi Blog se abrira en otra pagina.</a></p>
 
 <h1
 style="text-align:center;margin-left:auto;margin-right:auto;color:#0080c0">Mapas
